# Girvan-Newman

./: CMakeLists.txt  README.md
data/: output.txt  put_data_here.txt
src/: GirvanNewman.cpp  GirvanNewman.h  main.cpp  reader.cpp  reader.hpp
